# scli-rs

./: Cargo.toml  README.md
src/: main.rs  network.rs  subgraph.rs
src/daily_volume/: mod.rs
src/graphql/queries/: blockByTimestamp.graphql  blockByTimestamp.rs  exchange-v2.graphql  farms.rs  masterchefPools.rs  masterchefv2Pools.rs  minichefPools.rs  mod.rs  pairsByTvl.graphql  pairsDailyVolume.graphql  periodVolumeQuery.graphql  periodVolumeQuery.rs
src/graphql/schemas/: blocks.json  exchange-v2.json  masterchef.json  masterchefv2.json  minichef.json
src/helpers/: mod.rs  token_list.rs
src/helpers/block/: block_timestamp.rs  mod.rs
src/helpers/farm/: mod.rs  pools_with_sushi.rs
src/helpers/volume/: mod.rs  period_volume.rs
src/scli/: mod.rs  revenues.rs
