[package]
name = "scli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
clap = "4.1.6"
cli-table = "0.4.7"
ethers = "1.0.2"
graphql_client = "0.12.0"
phf = {version = "0.11.1", features = ["macros"]}
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = "1.0.152"
